[package]
name = "ucode"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
urlencoding = "2.1.3"
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
csv = "1.1"

dotenv = "0.15.0"
log = "0.4"
env_logger = "0.10"

chrono = "0.4"